# ChangeLog for dev-util/qgit
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/ChangeLog,v 1.37 2007/12/31 16:48:32 jokey Exp $

*qgit-2.1 (31 Dec 2007)
*qgit-1.5.8 (31 Dec 2007)

  31 Dec 2007; Markus Ullmann <jokey@gentoo.org> +qgit-1.5.8.ebuild,
  +qgit-2.1.ebuild:
  Version bump to 2.1 and 1.5.8

*qgit-2.0-r1 (09 Oct 2007)

  09 Oct 2007; Markus Ullmann <jokey@gentoo.org> -qgit-2.0.ebuild,
  +qgit-2.0-r1.ebuild:
  Revbump to install binary correctly, thanks to voyageur for catching it

  08 Oct 2007; Markus Ullmann <jokey@gentoo.org> qgit-2.0.ebuild
  -qgit-1.5.6.ebuild:
  Update SLOT and add info, kill old

*qgit-2.0 (08 Oct 2007)

  08 Oct 2007; Markus Ullmann <jokey@gentoo.org> +qgit-2.0.ebuild:
  Version bump wrt bug #194424

  20 Sep 2007; Brent Baude <ranger@gentoo.org> qgit-1.5.7.ebuild:
  keywording qgit-1.5.7 ppc64 for bug# 190697

  19 Sep 2007; Christoph Mende <angelos@gentoo.org> qgit-1.5.7.ebuild:
  Stable on amd64 wrt security bug #190697

  17 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org> qgit-1.5.7.ebuild:
  ppc stable, bug #190697

  17 Sep 2007; Raúl Porcel <armin76@gentoo.org> qgit-1.5.7.ebuild:
  x86 stable wrt security #190697

  17 Sep 2007; Markus Ullmann <jokey@gentoo.org> metadata.xml:
  Update metadata and add me as maintainer

*qgit-1.5.7 (17 Sep 2007)

  17 Sep 2007; Markus Ullmann <jokey@gentoo.org> -qgit-1.5.5.ebuild,
  +qgit-1.5.7.ebuild:
  Version bump wrt security bug #190697

  05 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> qgit-1.5.6.ebuild:
  ppc stable, bug #187270

  03 Aug 2007; Christoph Mende <angelos@gentoo.org> qgit-1.5.6.ebuild:
  Stable on amd64 wrt bug #187270

  01 Aug 2007; Markus Rothe <corsair@gentoo.org> qgit-1.5.6.ebuild:
  Stable on ppc64; bug #187270

  31 Jul 2007; Markus Ullmann <jokey@gentoo.org> qgit-1.5.6.ebuild:
  Stable on x86 wrt bug #187270

*qgit-1.5.6 (05 Jun 2007)
