@@ -17,14 +17,14 @@ EBUILD qgit-2.0-r1.ebuild 819 RMD160 a7ae94c0237aa8d020e496bd2443b87200b32165 SH
 MD5 fbc4d1f8956d56458bf81a4b2d4b6035 qgit-2.0-r1.ebuild 819
 RMD160 a7ae94c0237aa8d020e496bd2443b87200b32165 qgit-2.0-r1.ebuild 819
 SHA256 85240650f9d11dc4c2ba0748c590eb59742db9ef240920adf74feb81e36bd2a1 qgit-2.0-r1.ebuild 819
-EBUILD qgit-2.1.ebuild 816 RMD160 6daaf29ce8f253744dca1bde80910cc7c3feaaa2 SHA1 0fd13ad03120f1d3c58fe65286e542d7b7810d9a SHA256 65e97941711b1a5cbe6497bc1b736de0ba050e1a881ff781ff18c48cad72c881
-MD5 d2cec89081aa5630dfb666f7b5adaf58 qgit-2.1.ebuild 816
-RMD160 6daaf29ce8f253744dca1bde80910cc7c3feaaa2 qgit-2.1.ebuild 816
-SHA256 65e97941711b1a5cbe6497bc1b736de0ba050e1a881ff781ff18c48cad72c881 qgit-2.1.ebuild 816
-MISC ChangeLog 5077 RMD160 cd058b3e5656a4713d436f71e80ac083ebda735b SHA1 edd91239a439b626680c40bfb9d5139340352474 SHA256 2c515cad3256a9ef3753a8911b732877ebff474cb76fe0659352509440f01ae2
-MD5 9756680d01163f0656e132026fc8dfd5 ChangeLog 5077
-RMD160 cd058b3e5656a4713d436f71e80ac083ebda735b ChangeLog 5077
-SHA256 2c515cad3256a9ef3753a8911b732877ebff474cb76fe0659352509440f01ae2 ChangeLog 5077
+EBUILD qgit-2.1.ebuild 946 RMD160 19c7b1b65999653648cb2adf77ee79af1042b5de SHA1 bd7ec7f2bf8ef205fd68d4fe3d3a978a442986f1 SHA256 7753774f47a1d8e5ff3e0dc514f649d0956404f1cfac9ea31f648e8ea2424c8d
+MD5 118695193cc15be82fa9a8a97bf46c28 qgit-2.1.ebuild 946
+RMD160 19c7b1b65999653648cb2adf77ee79af1042b5de qgit-2.1.ebuild 946
+SHA256 7753774f47a1d8e5ff3e0dc514f649d0956404f1cfac9ea31f648e8ea2424c8d qgit-2.1.ebuild 946
+MISC ChangeLog 5208 RMD160 aea1a7a0315da3103ecc6b42347871928f530870 SHA1 d1c043ddd9f11cddcca8b20abe4d3a1b40b91440 SHA256 f97a4ea70c181cf5b65006d724c6cfb74f57af9fac4e9b3ec641a37e7cfaae47
+MD5 9cc964141800e8f8b77fd3f652e1159c ChangeLog 5208
+RMD160 aea1a7a0315da3103ecc6b42347871928f530870 ChangeLog 5208
+SHA256 f97a4ea70c181cf5b65006d724c6cfb74f57af9fac4e9b3ec641a37e7cfaae47 ChangeLog 5208
 MISC metadata.xml 355 RMD160 40095a95a3da87fbeb90935a3cb87f127e69da73 SHA1 593165765748f984713db01571743c95aaa52748 SHA256 97365c6b6404edf5aff35ba59dcf22517d9f32704de74a23ed1974f46e61b88a
 MD5 341fb0a60f92bdfc876c8a0798b38979 metadata.xml 355
 RMD160 40095a95a3da87fbeb90935a3cb87f127e69da73 metadata.xml 355
@@ -42,9 +42,9 @@ MD5 cb034fa0b956038fba5a32a0c9304602 files/digest-qgit-2.1 229
 RMD160 0b64d62c1d94fb6f0fd770e3725267446b219852 files/digest-qgit-2.1 229
 SHA256 387934ea4dd9fbc5c73f21d401a30a4441b961c4d254f46e864fc79eda25818a files/digest-qgit-2.1 229
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.8 (GNU/Linux)
+Version: GnuPG v2.0.7 (GNU/Linux)
 
-iEYEARECAAYFAkd5HYMACgkQz974XjDVpbnXowCggbkGFewdVo/j75Cz5HMheZOQ
-r+4An3s5tufgTILX2yOJ/55Ixc7cK/T7
-=ON9Y
+iD8DBQFHikPoz974XjDVpbkRAkzqAJ9JFPRgghhmKo9+fO9IU1aChgXpPwCgk0Iu
+LkD6upauwEsk0/H9TNgeAls=
+=M0Cq
 -----END PGP SIGNATURE-----
