@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/qgit-2.1.ebuild,v 1.1 2007/12/31 16:48:32 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/qgit-2.1.ebuild,v 1.2 2008/01/13 17:01:17 jokey Exp $
 
 inherit qt4
 
@@ -21,6 +21,12 @@ RDEPEND="${DEPEND}
 	>=dev-util/git-1.5.3"
 
 S="${WORKDIR}/${PN}"
+
+src_unpack() {
+	unpack ${A}
+	cd "${S}"
+	sed -i -e '/^[[:space:]]*QMAKE_CXXFLAGS_RELEASE.*+=/s/-g3 -O[[:digit:]]//' src/src.pro
+}
 
 src_compile() {
 	eqmake4 || die "eqmake failed"
